[package]
name = "solana-wallet-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18.0"
solana-sdk = "1.18.0"
solana-transaction-status = "1.18.0"
solana-account-decoder = "1.18.0"
spl-token = "4.0.0"
spl-token-2022 = "0.9.0"
mpl-token-metadata = "4.1.2"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
borsh = "0.10.3"
base64 = "0.21"